# moregard-terraform

./: .gitattributes  .gitignore  .gitlab-ci.yml  .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py
backend/app/repositories/: __init__.py  request_repository.py
backend/app/services/: gitlab.py  pipeline.py  plan_summary.py  request_status.py  terraform_payload.py  terraform_state.py
backend/config/: backend.hcl.example
backend/examples/: ansible-managed-vm-request.json  ansible-testend-request.json
modules/vm_from_template/: main.tf  outputs.tf  variables.tf  versions.tf
scripts/: verify_tfplan_destroy_safety.py
