[project]
name = "vm-orchestrator-api"
version = "0.1.0"
description = "Backend orchestration service for Terraform and Ansible VM workflows"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.35.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "uvicorn>=0.32.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*"]
